--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -4,8 +4,8 @@
   <%- include('includes/flash') %>
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
-      <h1 class="display-3">Remember Writing?</h1>      
-      <p class="lead text-muted">Are you sick of short tweets and impersonal &ldquo;shared&rdquo; posts that are reminiscent of the late 90&rsquo;s email forwards? We believe getting back to actually writing is the key to enjoying the internet again.</p>
+      <h1 class="display-3">The Small Circle</h1>      
+      <p class="lead text-muted">This is a place you can feel safe to say whatever you want! Ladies and gentlemen, I present to you "The Small Circle" that you can sign up and join. Feel free to troll or gossip anyone because the admin doesn't care. But anyway, you're encouraged to leave positive comments and compliment on one another since the admin would feel less embarrassed when he demo this app in a job interview or in case his parents join one day.</p>
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
@@ -30,7 +30,7 @@
           </div>
           
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <button type="submit" class="py-3 mt-4 btn btn-lg btn-success btn-block">Sign up for OurApp</button>
+          <button type="submit" class="py-3 mt-4 btn btn-lg btn-block btn-theme-color">Sign up</button>
           
         </form>
       </div>
