--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -8,25 +8,26 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <header class="header-bar mb-3">
-    <div class="container d-flex flex-column flex-md-row align-items-center p-3">
-      <h4 class="my-0 mr-md-auto font-weight-normal"><a href="/" class="text-white">BlogApp</a></h4>
+    <div class="container d-flex flex-column flex-md-row align-items-center p-1">
+      <a class="navbar-brand" href="/"><img class="logo" src="/images/logo-the-small-circle.png" alt="Small Group Logo"/></a>
       <% if(user) { %>
-        <div class="flex-row my-3 my-md-0">
+        <div class="flex-row my-3 my-md-0 ml-md-auto">
             <a href="#" class="text-white mr-2 header-search-icon" title="Search" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-search"></i></a>
             <span class="text-white mr-2 header-chat-icon" title="Chat" data-toggle="tooltip" data-placement="bottom"><i class="fas fa-comment"></i></span>
             <a href="/profile/<%= user.username %>" class="mr-2"><img title="My Profile" data-toggle="tooltip" data-placement="bottom" style="width: 32px; height: 32px; border-radius: 16px;" src="<%= user.avatar %>"></a>
-            <a class="btn btn-sm btn-success mr-2" href="/create-post">Create Post</a>
+            <a class="btn btn-sm btn-theme-color mr-2" href="/create-post">Create Post</a>
             <form action="/logout" method="POST" class="d-inline">
               <input type="hidden" name="_csrf" value="<%= csrfToken %>">
               <button class="btn btn-sm btn-secondary">Sign Out</button>
             </form>
         </div>   
       <% } else { %>
-        <form action="/login" method="POST" class="mb-0 pt-2 pt-md-0">
+        <form action="/login" method="POST" class="mb-0 pt-2 pt-md-0 ml-md-auto">
             <div class="row align-items-center">
               <div class="col-md mr-0 pr-md-0 mb-3 mb-md-0">
                 <input name="username" class="form-control form-control-sm input-dark" type="text" placeholder="Username" autocomplete="off">
@@ -36,7 +37,7 @@
               </div>
               <div class="col-md-auto">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button class="btn btn-primary btn-sm">Sign In</button>
+                <button class="btn btn-theme-color btn-sm">Sign In</button>
               </div>
             </div>
           </form>
